fix: test on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,15 +14,14 @@ canvas {
 }
 #overlay {
   background: #000;
-  width: 100%;
+   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 5rem;
   color: #fff;
   background: #000;
